# docs

./: .dockerignore  .env  .gitignore  .sops.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  SECURITY.md  UPGRADE.md  compose-e2e.yml  compose.production.yaml  compose.yml  default.nix  docker-compose.yml  docs-3.10.0.tgz  docs-3.4.0-beta.2.tgz  docs-3.4.0.tgz  docs-3.4.1.tgz  docs-3.4.2.tgz  docs-3.5.0.tgz  docs-3.6.0.tgz  docs-3.7.0.tgz  docs-3.8.0.tgz  docs-3.8.1.tgz  docs-3.8.2.tgz  docs-3.8.21.tgz  docs-3.9.0.tgz  docs-4.0.0.tgz  docs-4.1.0.tgz  docs-4.2.0.tgz  docs-4.3.0.tgz  docs-4.4.0.tgz  docs-4.5.0.tgz  docs-4.6.0.tgz  docs-4.7.0.tgz  docs-4.8.0-psycopgpool.tgz  (+18 more)
.github/: .trivyignore  (+1 more)
src/backend/: conftest.py  pyproject.toml
src/backend/core/: admin.py  apps.py  checks.py  choices.py  enums.py  factories.py  forms.py  malware_detection.py  middleware.py  models.py  signals.py  urls.py  utils.py  validators.py
src/backend/core/api/: custom_collector.py  custom_metrics_exporter.py  custom_probe_views.py  decorators.py  filters.py  import_viewsets.py  imports.py  monitoring.py  permissions.py  serializers.py  throttling.py  utils.py  viewsets.py
src/backend/core/authentication/: backends.py  middleware.py  views.py
src/backend/core/external_api/: permissions.py  viewsets.py
src/backend/core/migrations/: 0015_set_path_on_existing_documents.py  0019_alter_user_language_default_to_null.py  0020_remove_is_public_add_field_attachments_and_duplicated_from.py  0024_add_is_masked_field_to_link_trace.py  0025_alter_document_link_role_alter_documentaccess_role_and_more.py  0025_alter_user_short_name.py  0025_comments.py  0025_outline_import_job.py  0026_alter_comment_content.py  0026_comments.py  0027_alter_comment_options_rename_content_comment_body_and_more.py  0027_auto_20251120_0956.py  0027_merge_0025_outline_import_job_0026_comments.py  0027_userreconciliationcsvimport_userreconciliation.py  0028_remove_templateaccess_template_and_more.py  0028_userreconciliationcsvimport_userreconciliation.py  0029_document_is_encrypted_and_more.py  0029_merge_0027_outline_import_0028_remove_template.py  0029_userreconciliationcsvimport_userreconciliation.py  0030_user_is_first_connection.py  0031_clean_onboarding_accesses.py  0032_remove_linktrace_is_masked.py  0033_mention.py
src/backend/core/notion_schemas/: notion_block.py  notion_color.py  notion_file.py  notion_page.py  notion_rich_text.py
src/backend/core/services/: ai_services.py  collaboration_services.py  config_services.py  converter_services.py  mime_types.py  notion_import.py  outline_import.py  search_indexers.py  yprovider_services.py
src/backend/core/tasks/: access.py  find.py  mail.py  outline_import.py  search.py  user_reconciliation.py
src/backend/core/templates/: runindexing.html
src/backend/core/templatetags/: extra_tags.py
src/backend/core/tests/: conftest.py  test_admin_run_indexing.py  test_api_config.py  test_api_custom_translations.py  test_api_throttling_document_throttle.py  test_api_user_reconciliation.py  test_api_users.py  test_api_utils_conditional_refresh_oidc_token.py  test_api_utils_parse_http_conditional_headers.py  test_api_utils_refresh_access_token.py  test_external_api_documents.py  test_external_api_users.py  test_models_comment.py  test_models_document_accesses.py  test_models_documents.py  test_models_documents_indexer.py  test_models_invitations.py  test_models_mentions.py  test_models_user_reconciliation.py  test_models_users.py  test_services_ai_services.py  test_services_collaboration_services.py  test_services_converter_orchestration.py  test_services_converter_services.py  test_services_docspec_converter.py  test_services_find_document_indexer.py  test_services_search_indexers.py  test_services_yprovider_services.py  test_settings.py  test_tasks_access.py  test_utils.py  test_utils_analytics.py  test_utils_create_tree_node_with_retry.py  test_utils_filter_descendants.py  (+2 more)
src/backend/demo/: defaults.py
src/backend/impress/: asgi.py  celery_app.py  prometheus_cache.py  settings.py  urls.py  wsgi.py
src/backend/resource_server/: urls.py  viewsets.py
(+1156 files in other folders)
